# BridgeLine

./: .dockerignore  .env.example  .gitignore  .vercelignore  README.md  docker-compose.yml  vercel.json
apps/api/: Dockerfile  README.md  pyproject.toml
apps/api/bridgeline/: __init__.py  config.py  main.py
apps/api/bridgeline/api/: compliance.py  health.py  ieps.py  pipeline.py  rules.py
apps/api/bridgeline/db/: base.py  iep_records.py  models.py  schemas.py  session.py
apps/api/bridgeline/ingest/: __init__.py  extract.py  gate.py  identity.py  normalize.py  ocr.py  persistence.py  pipeline.py  status.py
apps/api/bridgeline/llm/: __init__.py  client.py  prompts.py
apps/api/bridgeline/orchestrator/: __init__.py  bus.py  composition.py  pipeline.py  stages.py  store.py
apps/api/bridgeline/rules/: RULES.md  __init__.py  calendar.py  citations.py  engine.py  generate_docs.py  registry.py  repository.py  scope_resolution.py  seed_demo.py  types.py
apps/api/migrations/: README  env.py  script.py.mako
apps/api/migrations/versions/: 5f2e91c480d1_rules_distribution.py  7a14c918b2e6_rules_deadlines.py  9c31f4d82a07_service_delivery_logs.py  b72e590ca641_implementation_gap_state.py  c84d19a72f10_scope_reference_resolution.py  d39e7a3c18f2_pipeline_status_events.py  ec24a3719c3b_initial_domain_tables.py  ef0a1b2c4d5e_pipeline_attention.py
apps/api/tests/: __init__.py  db_smoke.py  llm_smoke.py  test_health.py  test_llm_gateway.py  test_schema_roundtrip.py
apps/api/tests/ingest/: __init__.py  conftest.py  test_api_and_status.py  test_extract_and_gate.py  (+5 more)
(+378 files in other folders)
