[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[project]
name = "bridgeline-api"
version = "0.1.0"
description = "Bridgeline IEP operations API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "google-genai==2.10.0",
  "httpx>=0.28,<1",
  "numpy>=2.2,<3",
  "opencv-python-headless>=4.11,<5",
  "pillow>=11.1,<12",
  "pydantic-settings>=2.7,<3",
  "pypdfium2>=4.30,<5",
  "pytesseract>=0.3.13,<1",
  "python-docx>=1.1,<2",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy[asyncio]>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["bridgeline"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --strict-config"
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
files = ["bridgeline", "tests"]

[[tool.mypy.overrides]]
module = ["asyncpg.*", "pypdfium2.*", "pytesseract.*"]
ignore_missing_imports = true
